# f5-tts-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_infer_single.py  train_libritts_small.py
assets/: mel_filters.npz
examples/: README.md  generate.py
f5_tts_mlx/: README.md  __init__.py  audio.py  cfm.py  convnext_v2.py  data.py  dit.py  duration.py  duration_trainer.py  generate.py  modules.py  rope.py  trainer.py  utils.py
