[build-system]
requires = [
    "einops",
    "jieba",
    "huggingface_hub",
    "mlx",
    "numpy",
    "setuptools",
    "vocos-mlx"
]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts-mlx"
version = "0.0.1"
authors = [{name = "Lucas Newman", email = "lucasnewman@me.com"}]
license = {text = "MIT"}
description = "F5-TTS - MLX"
readme = "README.md"
keywords = [
    "artificial intelligence",
    "asr",
    "audio-generation",
    "deep learning",
    "transformers",
    "text-to-speech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = ['setuptools; python_version>="3.9"']

[project.urls]
Homepage = "https://github.com/lucasnewman/f5-tts-mlx"

[tool.setuptools]
packages = ["f5_tts_mlx"]
