[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts-mlx"
version = "0.0.6"
authors = [{name = "Lucas Newman", email = "lucasnewman@me.com"}]
license = {text = "MIT"}
description = "F5-TTS - MLX"
readme = "README.md"
keywords = [
    "artificial intelligence",
    "asr",
    "audio-generation",
    "deep learning",
    "transformers",
    "text-to-speech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "einops",
    "einx",
    "jieba",
    "huggingface_hub",
    "mlx",
    "numpy",
    "setuptools",
    "soundfile",
    "vocos-mlx"
]

[project.urls]
Homepage = "https://github.com/lucasnewman/f5-tts-mlx"

[tool.setuptools]
packages = ["f5_tts_mlx"]

[tool.setuptools.package-data]
f5_tts_mlx = ["assets/mel_filters.npz", "tests/test_en_1_ref_short.wav"]

[project.scripts]
f5-tts-mlx = "f5_tts_mlx.generate:main"
